fixed hieght issue on mobile canvas

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 
 a:link,
 a:visited {
-  color: #bdc3c7;
+  color: #444444;
 }
 
 canvas { 
@@ -128,6 +128,10 @@ h2 {
   text-align: center;
 }
 
+h1 {
+  font-style: italic;
+}
+
 .intro-title h2,
 .about-title h2 {
   font-size: 30px;
@@ -136,6 +140,7 @@ h2 {
 .intro-text p {
   font-size: 20px;
   font-weight: bold;
+  text-align: left;
 }
 
 .intro-text,
@@ -146,6 +151,11 @@ h2 {
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+.intro-text p a {
+  color: white;
+  text-decoration: underline;
 }
 
 .about-blurb p {
@@ -177,7 +187,7 @@ button {
   margin: 0 20px;
   transition: all 0.4s;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
 }
 
